# libarib25

./: .appveyor.yml  .editorconfig  .gitignore  .tarball-version  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  Makefile.am  NOTICE  README.md  README.org  README.txt  arib_std_b25.sln  arib_std_b25.vcproj  configure.ac
.github/workflows/: Dockerfile  build.yml
cmake/: ElfInterp.cmake  FindPCSC.cmake  FindWINSCARD.cmake  GenerateExportHeader.cmake  GitRevision.cmake  PostInstall.cmake  Uninstall.cmake
src/: Makefile  arib25.pc.in  arib25api.h  arib_std_b25.c  arib_std_b25.h  arib_std_b25_error_code.h  b_cas_card.c  b_cas_card.h  b_cas_card_error_code.h  config.h.in  getopt.c  getopt.h  libarib25.pc.in  makefile.win  multi2.c  multi2.cc  multi2.h  multi2_block.h  multi2_cipher.h  multi2_compat.h  multi2_error_code.h  multi2_neon.h  multi2_neon2.h  multi2_xmm.h  multi2_ymm.h  multi2_ymm2.h  portable.h  td.c  ts_common_types.h  ts_section_parser.c  ts_section_parser.h  ts_section_parser_error_code.h  version.c  version.rc.in
